--- a/server/src/modules/admin/auth/auth.view.ejs
+++ b/server/src/modules/admin/auth/auth.view.ejs
@@ -1,24 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <%- include('../../../views/header'); %>
+  <style>
+    html {
+      background-color: #56baed;
+    }
+
+    body {
+      font-family: "Poppins", sans-serif;
+      height: 100vh;
+    }
+
+    h2 {
+      text-align: center;
+      font-size: 16px;
+      font-weight: 600;
+      text-transform: uppercase;
+      display:inline-block;
+      margin: 40px 8px 10px 8px; 
+      color: #cccccc;
+    }
+
+    .wrapper {
+      display: flex;
+      align-items: center;
+      flex-direction: column; 
+      justify-content: center;
+      width: 100%;
+      min-height: 100%;
+      padding: 20px;
+    }
+
+    #formContent {
+      -webkit-border-radius: 10px 10px 10px 10px;
+      border-radius: 10px 10px 10px 10px;
+      background: #fff;
+      padding: 30px;
+      width: 90%;
+      max-width: 450px;
+      position: relative;
+      padding: 0px;
+      box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
+      text-align: center;
+    }
+
+    h2.inactive {
+      color: #cccccc;
+    }
+
+    h2.active {
+      color: #0d0d0d;
+      border-bottom: 2px solid #5fbae9;
+    }
+
+    input[type=button], input[type=submit], input[type=reset]  {
+      background-color: #56baed;
+      border: none;
+      color: white;
+      padding: 15px 80px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      text-transform: uppercase;
+      font-size: 13px;
+      box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
+      border-radius: 5px 5px 5px 5px;
+      margin: 5px 20px 40px 20px;
+      transition: all 0.3s ease-in-out;
+    }
+
+    input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover  {
+      background-color: #39ace7;
+    }
+
+    input[type=button]:active, input[type=submit]:active, input[type=reset]:active  {
+      transform: scale(0.95);
+    }
+
+    input[type=text], input[type=password] {
+      background-color: #f6f6f6;
+      border: none;
+      color: #0d0d0d;
+      padding: 15px 32px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+      margin: 5px;
+      width: 85%;
+      border: 2px solid #f6f6f6;
+      border-radius: 5px 5px 5px 5px;
+    }
+
+    input[type=text]:focus, input[type=password]:focus {
+      background-color: #fff;
+      border-bottom: 2px solid #5fbae9;
+    }
+
+    input[type=text]:placeholder, input[type=password]:focus {
+      color: #cccccc;
+    }
+  </style>
 </head>
 <body>
-  <form method="POST" action="/adm/login">
-    <label>Username:</label>
-    <br/>
-    <input name="username" placeholder="username" />
-    
-    <br/>
-    <label>Password:</label>
-    <br/>
-    <input name="password" placeholder="username" />
-
-    <br/>
-    <input type="submit" value="login" />
-  </form>
+  <div class="wrapper">
+    <div id="formContent">
+      <!-- Login Form -->
+      <h2>Admin Authentication</h2>
+      <form method="POST" action="/adm/login">
+        <input name="username" placeholder="username" id="login" type="text" />
+        <input name="password" placeholder="password" id="password" type="password" />
+        <input type="submit" value="login" class="fourth" />
+      </form>
+    </div>
+  </div>
+  <%- include('../../../views/footer'); %>
 </body>
 </html>
