--- a/server/src/modules/admin/auth/auth.view.ejs
+++ b/server/src/modules/admin/auth/auth.view.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <%- include('../../../views/header'); %>
+  <%- include(views + '/header'); %>
   <style>
     html {
       background-color: #56baed;
@@ -115,6 +115,6 @@
       </form>
     </div>
   </div>
-  <%- include('../../../views/footer'); %>
+  <%- include(views + '/footer'); %>
 </body>
 </html>
