--- a/server/src/modules/admin/home/home.view.ejs
+++ b/server/src/modules/admin/home/home.view.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <%- include(views + '/header'); %>
+  <%- include('header'); %>
   <style>
     .header {
       text-align: center;
@@ -24,6 +24,6 @@
       </li>
     </ul>
   </div>
-  <%- include(views + '/footer'); %>
+  <%- include('footer'); %>
 </body>
 </html>
