mock middleware auth_user & static folder & upd package command

--- a/server/src/modules/user/home/home.view.ejs
+++ b/server/src/modules/user/home/home.view.ejs
@@ -4,26 +4,22 @@
   <%- include('header'); %>
   <style>
     .header {
-      text-align: center;
-      padding: 20px 0;
+      height: 100vh;
+      background-image: url(/assets/images/login_bg.png);
+      background-repeat: no-repeat;
+      background-size: cover;
     }
+    
   </style>
 </head>
 <body>
   <div class="container-fluid">
-    <h1 class="header">
-      Heo Đến Rồi
-    </h1>
-    <br/>
-    <ul class="nav">
-      <li class="nav-item">
-        <a class="nav-link active" href="/adm//bull">Jobs manager</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/adm/logout">Logout</a>
-      </li>
-    </ul>
-  </div>
+    <div class="header">
+    </div>
+
+    Hello world
+ </div>
+  
   <%- include('footer'); %>
 </body>
 </html>
