--- a/server/src/common_views/header.ejs
+++ b/server/src/common_views/header.ejs
@@ -3,3 +3,4 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Heo Đến Rồi Tools</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+  <link rel="stylesheet" href="/assets/styles/styles.css">
