ad design ui log

--- a/server/src/modules/admin/home/home.view.ejs
+++ b/server/src/modules/admin/home/home.view.ejs
@@ -17,7 +17,10 @@
     <br/>
     <ul class="nav">
       <li class="nav-item">
-        <a class="nav-link active" href="/adm//bull">Jobs manager</a>
+        <a class="nav-link active" href="/adm/bull">Jobs manager</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active" href="/adm/logger">Logger</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/adm/logout">Logout</a>
