--- a/server/src/modules/admin/home/home.view.ejs
+++ b/server/src/modules/admin/home/home.view.ejs
@@ -13,8 +13,13 @@
   <div class="container-fluid">
     <h1 class="header">
       Heo Đến Rồi
+      <br>
     </h1>
     <br/>
+    <h4 class="ml-3">
+      <%=timeUTC %>
+    </h4>
+    <br>
     <ul class="nav">
       <li class="nav-item">
         <a class="nav-link active" href="/adm/bull">Jobs manager</a>
