--- a/server/src/modules/admin/logger/logger.view.ejs
+++ b/server/src/modules/admin/logger/logger.view.ejs
@@ -22,26 +22,40 @@
     </div>
     <div class="row content">
       <div class="col-xl-2 menu">
-        <label class="form-label">Date range:</label>
-        <div class="input-group input-daterange mb-3"  id="date-picker-from">
-          <input type="text" class="form-control">
-          <span class="input-group-append">
-            <div class="input-group-text bg-transparent">
-              <i class="bi bi-calendar-week"></i>
+        <form>
+          <div class="form-group">
+            <label class="form-label">Date range:</label>
+            <div class="input-group input-daterange mb-3"  id="date-picker-from">
+              <input type="text" class="form-control text-left" name="date_from" value="<%=filter.date_from%>">
+              <span class="input-group-append">
+                <div class="input-group-text bg-transparent">
+                  <i class="bi bi-calendar-week"></i>
+                </div>
+              </span>
             </div>
-          </span>
-        </div>
-        <div class="input-group input-daterange mb-3" id="date-picker-to">
-          <input type="text" class="form-control">
-          <span class="input-group-append">
-            <div class="input-group-text bg-transparent">
-              <i class="bi bi-calendar-week"></i>
+            <div class="input-group input-daterange mb-3" id="date-picker-to">
+              <input type="text" class="form-control text-left" name="date_to" value="<%=filter.date_to%>">
+              <span class="input-group-append">
+                <div class="input-group-text bg-transparent">
+                  <i class="bi bi-calendar-week"></i>
+                </div>
+              </span>
             </div>
-          </span>
-        </div>
-        <div class="input-group">
-          <button type="submit" class="btn btn-primary mb-3">Filter</button>
-        </div>
+          </div>
+          <div class="form-group">
+            <label for="exampleFormControlSelect1">Size page</label>
+            <select class="form-control w-auto" name="limit">
+              <% page_size.forEach(function(item, i){ %>
+                <option value="<%=item%>" <%=(item==filter.limit ? "selected" : "")%>>
+                  <%=item%>
+                </option>
+              <% }); %>
+            </select>
+          </div>
+          <div class="input-group">
+            <button type="submit" class="btn btn-primary mb-3">Filter</button>
+          </div>
+        </form>
       </div>
 
       <div class="col-xl-10 main">
@@ -71,6 +85,10 @@
 </body>
 
 <script>
+  $('#date-picker-from').datepicker({
+    "format": 'yyyy/mm/dd',
+    "autoclose": true
+  });
   $('#date-picker-to').datepicker({
     "format": 'yyyy/mm/dd',
     "autoclose": true
