optimize code & add not found page & add ws transport

--- a/server/src/modules/common/proxy_prohibition/proxy_prohibition.view.ejs
+++ b/server/src/modules/common/proxy_prohibition/proxy_prohibition.view.ejs
@@ -4,7 +4,7 @@
   <%- include('header'); %>
 </head>
 <body>
-  Bạn vui long không sử dụng proxy để truy cập!
+  Bạn vui lòng không sử dụng proxy để truy cập!
   <%- include('footer'); %>
 </body>
 </html>
