--- a/server/src/modules/admin/home/home.view.ejs
+++ b/server/src/modules/admin/home/home.view.ejs
@@ -28,6 +28,9 @@
         <a class="nav-link active" href="/adm/logger">Logger</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link active" href="/adm/proxy_manager">Proxy Manager</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="/adm/logout">Logout</a>
       </li>
     </ul>
