add uploads appversion

--- a/server/src/modules/admin/home/home.view.ejs
+++ b/server/src/modules/admin/home/home.view.ejs
@@ -31,6 +31,9 @@
         <a class="nav-link active" href="/adm/maintance">Maintance</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link active" href="/adm/app_version">App Version</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link active" href="/adm/proxy_manager">Proxy Manager</a>
       </li>
       <li class="nav-item">
