--- a/server/src/modules/admin/app_version/app_version.view.ejs
+++ b/server/src/modules/admin/app_version/app_version.view.ejs
@@ -12,7 +12,7 @@
       <div class="col-xl-10 group-detail">
         <div class="detail mr-4">
           <span class="title">Version</span>
-          <span class="value">1.0</span>
+          <span class="value"><%= version %></span>
         </div>
       </div>
     </div>
@@ -43,9 +43,13 @@
             <textarea name="detail" class="form-control" placeholder="Detail"><%= detail; %></textarea>
           </div>
           <div class="form-group">
+            <label for="exampleInputPassword1">Youtube</label>
+            <input required type="text" name="youtube" value="<%= youtube; %>" class="form-control" aria-describedby="versionHelp" placeholder="Enter youtube">
+          </div>
+          <div class="form-group">
             <label for="customFile">File</label>
             <div class="custom-file">
-              <input name="file" type="file" class="custom-file-input" id="customFile" required>
+              <input name="file" type="file" class="custom-file-input" id="customFile">
               <label class="custom-file-label" for="customFile">Choose file...</label>
             </div> 
           </div>
