--- a/server/src/modules/user/home/home.view.ejs
+++ b/server/src/modules/user/home/home.view.ejs
@@ -4,19 +4,64 @@
   <%- include('header'); %>
   <style>
     .header {
-      height: 100vh;
-      background-image: url('<%- _.image("login_bg.png") %>');
-      background-repeat: no-repeat;
-      background-size: cover;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background-image: url('<%- _.image("bg_header.jpg") %>');
+      box-shadow: 1px 1px 2px #ccc;
     }
-    
+    .logo {
+      width: 100px;
+      object-fit: contain;
+    }
+    @media screen and (min-width: 768px) {
+      .ifsize {
+        width: 640px;
+        height: 480px;
+      }
+    }
   </style>
 </head>
 <body>
-  <div class="container-fluid">
+  <div class="container-fluid p-0">
     <div class="header">
+      <img src='<%- _.image("logo.png") %>' class="logo" />
     </div>
- </div>
+    <div class="jumbotron jumbotron-fluid mt-5">
+      <div class="container">
+        <h1 class="display-4">Heo Đến Rồi Tools</h1>
+        <p class="lead">Tận hưởng cảm giác của tự động hóa.</p>
+      </div>
+    </div>
+    <div class="row p-3">
+      <div class="col-sm-12 col-md-6 mb-3 p-3">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">V<%=version;%></h5>
+            <h6 class="card-subtitle mb-2 text-muted">Tính năng</h6>
+            <p class="card-text" style="white-space: pre-line;"><%=detail;%></p>
+            <a href="<%=link;%>" class="card-link">Tải về</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-6 p-3 pl-0">
+        <div class="card "> 
+          <div class="card-body">
+            <h5 class="card-title">Hướng dẫn</h5>
+            <div class="d-flex justify-content-center">
+              <iframe src="<%=youtube;%>" class="ifsize"></iframe>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer class="bg-light text-center text-lg-start">
+      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+        © 2020 Copyright
+        <a class="text-dark" href="https://giayuh.com/"> giayuh.com</a>
+      </div>
+    </footer>
+  </div>
   
   <%- include('footer'); %>
 </body>
